Notice board endpoints (#3)
* Refresh gitignore, add database with docker, configure swagger

* Refresh gitignore

* Add endpoints for User and Note. Resolve errors occured

* Delete .idea directory

* Delete Dockerfile

* Update dependencies

* Rewrite code to split it into separate controllers

* Update README.md

* Change database to relational

* Add unit testing

* Update README.md
